<resources>
    <string name="app_name">Hablave</string>
    <string name="trip">Viajes</string>
    <string name="search">Buscar</string>
    <string name="create">Crear</string>
    <string name="chats">Mensajes</string>
    <string name="profile">Perfil</string>

    <string name="preparado_para_viajar">¿Preparado para viajar?</string>
    <string name="pulsar_de_nuevo_para_salir">Pulsa el botón atras de nuevo para salir.</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="contrasenia">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="usuario_incorrecto">Usuario Incorrecto</string>
    <string name="mensaje_usuario_incorrecto">Los datos introducidos no son correctos o el usuario no existe.</string>
    <string name="correo_vacio">El campo del correo electrónico está vacio</string>
    <string name="correo_invalido">El correo elecrónico no es válido</string>
    <string name="contrasenia_vacia">El campo de la contraseña está vacia</string>
    <string name="contrasenia_no_segura">La contraseña no es lo suficientemente segura</string>
    <string name="error_inicio_sesion_google">Error al iniciar sesión con google</string>
    <string name="error_generico">Ha ocurrido un error</string>
    <string name="email_no_verifiado">No verificado</string>
    <string name="correo_electronico_necesita_verificarse">Para poder iniciar sesión, debes anter verificar el correo electronico en un mensaje que le hemos enviado a correo electrónico</string>
    <string name="has_olvidado_la_contrasenia">¿Has olvidado la contraseña?</string>
    <string name="introduce_correo_electronico">Introduce el correo electrónico</string>
    <string name="correo_recuperacion_enviado">Se ha enviado un correo de recuperación</string>
    <string name="introduce_el_correo_electronico_para_mandarle_un_correo_de_recuperacion">Introduce el correo electronico para mandarle un correo de recuperación.</string>
    <string name="no_existe_ese_correo">No existe una cuenta de usuario asiciado a este correo</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="genero_no_binario">No binario</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comprueba_si_estos_datos_son_correctos">Comprueba si estos datos son correctos</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="fecha_nacimiento">Fecha nacimiento</string>
    <string name="genero">Género</string>
    <string name="cancelar">Cancelar</string>
    <string name="error_al_registrarse">Error al registrar</string>
    <string name="fallo_general">Fallo general</string>
    <string name="campo_nombre_vacio">El campo del nombre no puede estar vacio</string>
    <string name="campo_fecha_vacio">El campo fecha no puede estar vacio</string>
    <string name="campo_gender_vacio">El campo del genero no puede estar vacio</string>
    <string name="campo_pass_vacio">El campo de la contraseña no puede estar vacio</string>
    <string name="correo_electronico_usado">Ya existe una cuenta con este correo</string>
    <string name="trips_history">Historial de viajes</string>
    <string name="date_underAge">No se permite menores de 16 años</string>
    <string name="guardar">Guardar</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="profile_updated">Se ha actualizado el perfil</string>
    <string name="estacion_origen">Estación origen</string>
    <string name="estacion_destino">Estación destino</string>
    <string name="fecha_viaje">Fecha del viaje</string>
    <string name="precio">Precio total</string>
    <string name="usted_ya_tiene_el_billete_comprado">¿Usted ya tiene el billete comprado?</string>
    <string name="crear_viaje">Crear viaje</string>
    <string name="same_stations">Has seleccionado las mismas estaciones</string>
    <string name="emptyPrice">El campo del precio no puede estar vacio</string>
    <string name="invalid_price_format">Debes poner un precio valido</string>
    <string name="date_trip_empty">El campo de la fecha no puede estar vacio</string>
    <string name="buscar_viaje">Buscar viaje</string>
    <string name="station_origin_error">La estacion origen esta vacia</string>
    <string name="station_destiny_error">La estacion destino esta vacia</string>
    <string name="tu_viaje">TU VIAJE</string>
    <string name="acompanantes">ACOMPAÑANTES</string>
    <string name="estaciones">ESTACIONES</string>
    <string name="provicia_origen">Provicina origen</string>
    <string name="provincia_destino">Provincia Destino</string>
    <string name="price">PRECIO</string>
    <string name="reservar">Reservar</string>
    <string name="eliminar_viaje">Eliminar viaje</string>
    <string name="plaza_libre">Plaza disponible</string>
    <string name="trip_deleted">Viaje eliminado</string>
    <string name="mensaje_viaje_eliminado">Este viaje ya no está disponible. Usted va a volver a la pantalla principal.</string>
    <string name="borrar_viaje">Borrar Viaje</string>
    <string name="pregunta_viaje_eliminar">¿Estas seguro que quieres borrar este viaje?</string>
    <string name="cancelar_reserva">Cancelar Reserva</string>
    <string name="trip_reserved">Plaza reservada</string>
    <string name="mensaje_plaza_reservada">Enorabuena. Ya tienes una plaza ene ste viaje. No se te olvide hablar con el creador del viaje para llegar a un acuerdo sobre el viaje.</string>
    <string name="trip_completed">Viaje completo</string>
    <string name="mensaje_plaza_completed">Lo sentimos pero este viaje acaba de llenarse y no quedan plazas libres. Sentimos mucho las molestias.</string>
    <string name="borrar_reserva">Cancelar reserva</string>
    <string name="pregunta_reserva_eliminar">¿Estas seguro de cancelar la reserva que tienes para este viaje?</string>
    <string name="trip_plaza_libre">Cancelacion Completada</string>
    <string name="mensaje_plaza_libre">Su plaza acaba de ser desasignada por lo que ya no esta en el viaje</string>
    <string name="escribe_el_mensaje">Escribe el mensaje</string>
    <string name="enviar">Enviar</string>
    <string name="abrir_chat">Abrir chat</string>
    <string name="no_tienes_viaje_aun">No tienes ningun viaje aún</string>
    <string name="cambiar_contrase_a">Cambiar Contraseña</string>
    <string name="cambiar_contrasenia_mensaje">¿Desea cambiar de contraseña?. Se le enviara un correo electronico para reestablecer su contraseña.</string>
    <string name="has_ticket">El dueño de este viaje tiene el billete comprado</string>
    <string name="no_ticket">El dueño de este viaje NO tiene el billete comprado</string>
    <string name="default_notification_channel_id">10015</string>
    <string name="hablave">Hablave</string>
    <string name="error_borrar_viaje">Error al borrar</string>
    <string name="borrar_viaje_mensaje">No puedes borrar un viaje si hay acompañantes registrados en el viaje. Contacte con ellos para poder eliminar este viaje.</string>
    <string name="mis_viajes">Mis viajes</string>
    <string name="Principal">Principal</string>
</resources>
