<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_trip"
        android:icon="@drawable/ic_train_24dp"
        android:title="@string/trip" />
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/search" />
    <item
        android:id="@+id/nav_create"
        android:icon="@drawable/ic_add_circle_outline_24dp"
        android:title="@string/create" />
    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_chat_24dp"
        android:title="@string/chats" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person_24dp"
        android:title="@string/profile" />
</menu>